--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,7 +1,7 @@
 .nav {
   height: 50px;
   padding: 10px;
-  background: #777;
+  background: rgba(0, 0, 0, 0.7);
   color: #999;
   display: flex;
   align-items: center;
@@ -22,9 +22,32 @@
   padding: 1rem;
   border: 1px solid white;
   border-radius: 5px;
+  position: relative;
+  z-index: 1;
 }
 
-.nav ul li a:hover{
+/* .nav ul li a:hover{
     background-color: #000;
     transition: background-color 250ms ease-in;
+} */
+
+.nav ul li a::after{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+
+.btn1::after{
+    transform: scaleX(0);
+    transform-origin: left;
+}
+
+.btn1:hover::after{
+    transform: scaleX(1);
+    transition: transform 500ms;
 }
