--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,24 @@
 .container h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about_me{
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  width: 80vw;
+  height: 80vh;
+  background-image: url("https://www.sitereportcard.com/wp-content/uploads/2019/10/about-me-page.jpeg");
+  background-size: cover;
+  background-position: top;
+  border: 1px solid black;
+  opacity: 0.5;
 }
