--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -5,7 +5,7 @@
   color: #999;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .nav ul {
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   list-style: none;
+  gap: 2rem;
 }
 
 .nav ul li a {
