--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,24 +1,44 @@
-.container h1{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.container{
+.container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 5px;
+  border: 1px solid white;
 }
 
-.about_me{
-  /* display: flex;
+.about_me {
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
+  gap: 2rem;
   width: 80vw;
-  height: 80vh;
-  background-image: url("https://www.sitereportcard.com/wp-content/uploads/2019/10/about-me-page.jpeg");
-  background-size: cover;
-  background-position: top;
-  border: 1px solid black;
-  opacity: 0.5;
+  margin: 2rem;
+  color: white;
+  border: 1px solid white;
+  border-radius: 50px;
+}
+
+.about_me:hover{
+  transition: box-shadow 500ms ease ;
+  box-shadow: 5px 5px 50px white;
+}
+
+.about_me p {
+  font-family: cursive;
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.text{
+  margin: 2rem;
+}
+
+.container img {
+  border-radius: 50px;
+  width: 400px;
+  height: 400px;
+  padding: 1rem;
 }
